--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8082
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/chat
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/testdb
+spring.datasource.username=user1
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
